<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">GeoQuiz</string>

    <string name="question_number_txt">Question #%d</string>

    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Prev</string>
    <string name="reset_button_text">Reset</string>

    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>

    <string name="question_txt_australia">Canberra is the capital of Australia</string>
    <string name="question_txt_oceans">The Pacific Ocean is larger than the Atlantic Ocean</string>
    <string name="question_txt_mideast">The Suez Canal connects the Red Sea and the Indian Ocean</string>
    <string name="question_txt_africa">The source of the Nile River is in Egypt</string>
    <string name="question_txt_americas">The Amazon River is the longest river in the Americas</string>
    <string name="question_txt_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake</string>


    <string name="cheat_activity_label">Cheat Page</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgement_toast">Cheating is wrong.</string>

</resources>
